--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start-dev:server": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev:server": "nodemon index.js"
   },
   "keywords": [],
   "author": "mherman22",
